--- a/Ghosting Connector/Base.lproj/Main.storyboard
+++ b/Ghosting Connector/Base.lproj/Main.storyboard
@@ -32,13 +32,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="o7i-fs-CbR">
-                                <rect key="frame" x="162" y="413" width="91" height="71"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="o7i-fs-CbR">
+                                <rect key="frame" x="177" y="419.5" width="60" height="57"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.081042814110074773" green="0.10876449015057536" blue="0.1242470357018679" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <color key="tintColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="o7i-fs-CbR" firstAttribute="centerY" secondItem="m0I-I7-ucD" secondAttribute="centerY" id="Lk2-fd-CkR"/>
+                            <constraint firstItem="o7i-fs-CbR" firstAttribute="centerX" secondItem="m0I-I7-ucD" secondAttribute="centerX" id="xTq-cW-DEY"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="62p-j8-MIR"/>
                     </view>
                     <navigationItem key="navigationItem" id="Gbq-05-BPl"/>
@@ -1220,7 +1223,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="sEJ-BF-7bl"/>
+        <segue reference="EKe-id-vDU"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="Add Button" width="92" height="92"/>
